<resources>
    <string name="app_name">Greenify Me</string>
    <string name="user_login">User</string>
    <string name="citizen_page">Citizen Team</string>
    <string name="admin_page">Admin Fragment</string>
    <string name="login_label">Log in</string>
    <string name="login_as_label">Log in as:</string>
    <string name="admin_login">Admin</string>
    <string name="database_manager">Database Manager</string>
    <string name="admin_presentation">Admin Presentation</string>
    <string name="manager_navigation_account_title">Account</string>
    <string name="manager_navigation_material_title">Material</string>
    <string name="landing">landing</string>
    <string name="add_contact">Create new item</string>
    <string name="save_action">Save</string>
    <string name="item_name_req">Name needed</string>
    <string name="email_req">Email</string>
    <string name="password_req">Password</string>
    <string name="trackedMaterialDatabase">Quantity</string>
    <string name="manager_navigation_form_title">Form</string>
    <string name="db_manager_reset">Reset</string>
    <string name="db_manager_delete_all">Delete All</string>
    <string name="db_manager_fab_text_account">New Account Item</string>
    <string name="database_not_implemented">This database hasn\'t been implemented yet</string>
    <string name="delete">Delete\n</string>
    <string name="account_is_admin">This account is admin</string>
    <string name="db_manager_fab_text_form">New Form</string>
    <string name="db_manager_empty_form">There are no forms in the database</string>
    <string name="db_manager_empty_account">There are no accounts in the database</string>
    <string name="db_manager_search_placeholder_account">Search Accounts</string>
    <string name="db_manager_search_placeholder_form">Search Forms</string>
    <string name="db_manager_close_search">Close Search</string>
    <string name="db_manager_has_admin_viewed">Admin has seen this form</string>
    <string name="db_manager_save">Save</string>
    <string name="db_manager_name_field">Name</string>
    <string name="db_manager_account_id_field">Account Id</string>
    <string name="db_manager_fab_text_material">New Material</string>
    <string name="db_manager_empty_material">There are no materials in the database</string>
    <string name="db_manager_search_placeholder_material">Search Materials</string>
    <string name="db_manager_fab_text_track">New Track</string>
    <string name="db_manager_empty_track">There are no tracks in the database</string>
    <string name="db_manager_search_placeholder_track">Search Tracks</string>
    <string name="database_panel_database_panel_ok">OK</string>
    <string name="database_panel_cancel">Cancel</string>
    <string name="database_panel_delete_main_confirmation">This will delete all data in the main database</string>
    <string name="database_panel_delete_sample_confirmation">This will delete all data in the sample database</string>
    <string name="database_panel_reset_sample_confirmation">This will reset the sample database</string>
    <string name="database_panel_are_you_sure">Are you sure?</string>
    <string name="database_panel_delete_all">Delete all</string>
    <string name="database_panel_reset">Reset</string>
    <string name="database_panel_sample_database">Sample</string>
    <string name="database_panel_main_database">Main</string>
    <string name="database_panel_actions">Actions</string>
    <string name="database_panel_inspect">Inspect</string>
    <string name="database_panel_status">Status (Initialised)</string>
    <string name="database_panel_database_panel">Databases</string>
    <string name="database_panel_main_db_deleted">Main database deleted</string>
    <string name="database_panel_sample_db_deleted">Sample database deleted</string>
    <string name="database_panel_sample_db_reset">Sample database reset</string>
    <string name="database_panel_main_db_reset">Main database reset</string>
    <string name="database_manager_content_no_items_found">No items found</string>
    <string name="manager_content_search">Search</string>
    <string name="manager_content_header_account">Id    Name | Email | Signed Once | Points</string>
    <string name="manager_content_header_form">Id    Account | Created At| Has Approved</string>
    <string name="manager_content_header_track">Id    Form | Material | Quantity</string>
    <string name="manager_content_header_material">Id    Name | Category | Points Per Gram | Points Per Piece</string>
    <string name="manager_content_close_search">Close Search</string>
    <string name="database_panel_reset_main_confirmation">This will delete all the data and reset the material list</string>
    <string name="user_form_app_bar_label">New Form</string>
    <string name="user_form_app_bar_cancel">Cancel</string>
    <string name="user_form_action_buttons_add">Add Material</string>
    <string name="user_form_dialog_category_title">Category</string>
    <string name="user_form_dialog_material_title">Material</string>
    <string name="user_form_dialog_quantity_title">Quantity</string>
    <string name="user_form_dialog_cancel">Cancel</string>
    <string name="user_form_dialog_back">Back</string>
    <string name="recycling_category_paper">Paper</string>
    <string name="recycling_category_plastic">Plastic</string>
    <string name="recycling_category_metal_cans">Metal</string>
    <string name="recycling_category_electronics">Electronics</string>
    <string name="recycling_category_organic">Waste</string>
    <string name="recycling_category_glass">Glass</string>
    <string name="recycling_category_fabric">Fabric</string>
    <string name="recycling_category_hazardous">Hazardous</string>
    <string name="recycling_category_other">Other</string>
    <string name="measurement_type_grams">Grams</string>
    <string name="measurement_type_kilos">Kilograms</string>
    <string name="measurement_type_pieces">Pieces</string>
    <string name="user_form_dialog_add">Add</string>
    <string name="user_submit_form">%1$s submitted a form</string>
    <string name="user_form_dialog_select">Select\u0020</string>
    <string name="user_home_welcome_dialog_button_ok">OK</string>
    <string name="user_home_welcome_dialog_title">Welcome!</string>
    <string name="user_form_dialog_quantity_option_grams">Grams</string>
    <string name="user_form_dialog_quantity_option_pieces">Pieces</string>
    <string name="user_home_welcome_dialog_message">Earn rewards for recycling and track your progress\n\nCreate your first recycling form with a tap in the "Form" section.</string>
    <string name="user_dialog_quantity_pieces">Enter pieces</string>
    <string name="user_dialog_quantity_grams">Enter grams</string>
    <string name="user_dialog_quantity_pieces_dis">*For every piece you get %1$s points</string>
    <string name="user_dialog_quantity_grams_dis">*For every gram you get %1$s points</string>
    <string name="admin_city_level_1">Eco-Starter</string>
    <string name="admin_city_level_2">Sustainability Suburb</string>
    <string name="admin_city_level_3">Green Metropolis</string>
    <string name="admin_rank_app_bar">Score</string>
    <string name="admin_home_app_bar_notifications">Open Notifications</string>
    <string name="admin_home_app_bar_exit">Exit</string>
    <string name="admin_rank_chart_button">Score</string>
    <string name="admin_good_morning">Good Morning</string>
    <string name="admin_good_afternoon">Good Afternoon</string>
    <string name="user_good_morning">Good Morning %1$s</string>
    <string name="user_good_afternoon">Good Afternoon %1$s</string>
    <string name="admin_rank_chart_label">Rank Board</string>
    <string name="admin_quantity_chart_label">Points Distribution</string>
    <string name="admin_quantity_chart_name">Names</string>
    <string name="admin_quantity_chart_category">Categories</string>
    <string name="admin_home_app_bar_edit_list">Edit List</string>
    <string name="admin_notification_account_sub">%1$s has created an account</string>
    <string name="admin_edit_materials_dialog_details_title">Material details</string>
    <string name="admin_edit_materials_dialog_new_title">New material</string>
    <string name="admin_edit_materials_dialog_add">Add</string>
    <string name="admin_edit_materials_dialog_delete">Remove</string>
    <string name="admin_rank_chart_make_a_form">Chart not available</string>
    <string name="notification_channel_name">New forms</string>
    <string name="notification_channel_form_title">You have a new form!</string>
    <string name="notifications">Notifications</string>
    <string name="admin_notification_form_points">points</string>
    <string name="recycling_tip_1">By recycling an aluminum can, save energy for 3 hours of TV!</string>
    <string name="recycling_tip_2">Recycling one glass bottle saves enough energy to light a 100-watt bulb for four hours.</string>
    <string name="recycling_tip_3">Recycling one ton of paper saves 17 trees.</string>
    <string name="recycling_tip_4">Recycle your newspapers and save 75 trees per year.</string>
    <string name="recycling_tip_5">Recycling plastic bottles saves enough energy to power a computer for 25 minutes.</string>
    <string name="recycling_tip_6">Recycle cardboard boxes and save trees, energy, and landfill space.</string>
    <string name="recycling_tip_7">Recycling one ton of plastic can save up to 2,000 gallons of gasoline.</string>
    <string name="recycling_tip_8">Recycling one ton of steel saves 2,500 pounds of iron ore, 1,400 pounds of coal, and 120 pounds of limestone.</string>
    <string name="recycling_tip_9">Recycle your old electronics to recover valuable metals and reduce electronic waste.</string>
    <string name="recycling_tip_10">Recycling one ton of office paper can save 380 gallons of oil.</string>
    <string name="recycling_tip_11">Recycling aluminum saves 95% of the energy required to make the same amount of aluminum from its virgin source.</string>
    <string name="recycling_tip_12">Recycle your old cell phones to recover precious metals like gold, silver, and copper.</string>
    <string name="recycling_tip_13">Recycling plastic reduces greenhouse gas emissions and conserves natural resources.</string>
    <string name="recycling_tip_14">Recycling one plastic bottle can save enough energy to power a CFL light bulb for 6 hours.</string>
    <string name="recycling_tip_15">Recycle your used motor oil to prevent water pollution and conserve energy.</string>
    <string name="recycling_tip_16">Recycling one ton of plastic bottles can save 1,500 gallons of gasoline.</string>
    <string name="recycling_tip_17">Recycling paper reduces air pollution by 74%.</string>
    <string name="recycling_tip_18">Recycle your old batteries to prevent hazardous chemicals from contaminating the environment.</string>
    <string name="recycling_tip_19">Recycling glass bottles saves 30% of the energy required to create new glass from raw materials.</string>
    <string name="recycling_tip_20">Recycling one ton of cardboard saves 46 gallons of oil.</string>
    <string name="recycling_tip_21">By recycling a plastic bottle, you save enough energy to power a lightbulb for 6 hours!</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="logoDescription">GrenifyMe Logo</string>
    <string name="create_account_label">Create Account</string>
    <string name="next_label_login">Next</string>
    <string name="sign_in_prompt">Sign in</string>
    <string name="forgot_password_label">Forgot password?</string>
    <string name="password_greeting">Welcome back! 👋</string>
    <string name="register_prompt_label">Register</string>
    <string name="full_name_prompt">Full name</string>
    <string name="confirm_password_prompt">Confirm Password</string>
</resources>